
o UPDATE: new plotting scheme using *network* and *GGally* packages

o ADD: a function to produce an automated Methods section for EGA functions (see `EGA.methods.section`)

o UPDATE: `bootEGA` now implements the updated `EGA` algorithm

o UPDATE: ega.wmt data (unidimensional)

o UPDATE: `itemStability` plot defaults ("GGally" color scheme) and examples (manipulating plot)


Changes in version 0.9.7

o UPDATE: `LCT` neural network weights were updated (parametric relu activation function)

o FIX: naming in `EGA`

o FIX: output network matrix in `EGA` when data are input

o UPDATE: citation version

o UPDATE: `node.redundant` now provides a full plot of redundancies detected, descriptive statistics including the critical value, central tendency descriptive statistics, and the distribution the significant values were determined from (thanks to Luis Garrido for the suggestion!)


Changes in version 0.9.6

o UPDATE: `LCT` updated with neural network implementation


Changes in version 0.9.5

o ADD: loadings comparison test function added (see `LCT`)

o FIX: named community memberships in `itemStability` and `dimStability`

o UPDATE: `plot`, `print`, and `summary` methods all moved into single .R files (no effect on user's end)

o UPDATE: `net.scores` global score is improved and computes scores very close to CFA scores

o FIX: additional argument calls for `EGA.estimate` (and `EGA` by extension)

o UPDATE: message from `EGA.estimate` (and `EGA` by extension) reports both 'gamma' and 'lambda.min.ratio' arguments

o FIX: upper quantile output from `bootEGA`

o FIX: minor bugs in `node.redundant`, `itemStability`, and `net.loads`


Changes in version 0.9.4

o MAJOR UPDATE: `dimStability` now computes proportion of exact dimension replications rather than items that replicate within dimension (this latter information can still be found in the output of `itemStability` under $mean.dim.rep)
