@@ -13,7 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: qgraph (>= 1.4.1), semPlot (>= 1.0.1),
         igraph (>= 1.0.1), lavaan (>= 0.5-22),
-        NetworkToolbox (>= 1.1.2), glasso (>= 1.10), stats, Matrix (>= 1.2),
+        NetworkToolbox (>= 1.4.0), glasso (>= 1.10), stats, Matrix (>= 1.2),
         dplyr (>= 0.7.8), plotly, network (>= 1.16.0), GGally (>= 2.0.0)
 Suggests: knitr, rmarkdown, markdown, kableExtra, psych, psychTools, ggpubr, ggplot2, 
         tidyselect, corpcor (>= 1.6.9), scales,
