@@ -37,6 +37,7 @@ export(ergoInfo)
 export(glla)
 export(itemStability)
 export(mctest.ergoInfo)
+export(mlnEGA)
 export(net.loads)
 export(net.scores)
 export(node.redundant)
