@@ -128,8 +128,7 @@
 #' Number of cores to use in computing results.
 #' Defaults to \code{parallel::detectCores() / 2} or half of your
 #' computer's processing power.
-#' Set to \code{1} to not use parallel computing.
-#' Recommended to use maximum number of cores minus one
+#' Set to \code{1} to not use parallel computing
 #'
 #' If you're unsure how many cores your computer has,
 #' then use the following code: \code{parallel::detectCores()}
